--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -13,7 +13,7 @@
         <div class="col">
             <h2>Registro</h2>
 
-            <form action="" method="post">
+            <form action="" method="post"> {% csrf_token %}
 
 <!--                <div class="mb-3">-->
 <!--                    {{form.username.label_tag}}-->
@@ -29,6 +29,7 @@
 <!--                    {{form.password.label_tag}}-->
 <!--                    {{form.password}}-->
 <!--                </div>-->
+
                 {% for field in form %}
                  <div class="mb-3">
                      {{field.label_tag}}
@@ -36,10 +37,12 @@
                  </div>
                 {%endfor%}
                 <button type="submit" class="btn btn-primary">Register</button>
+
             </form>
         </div>
     </div>
 </div>
+
 </body>
 
 </html>
